<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onLeaveButtonClick"
            type="kotlin.jvm.functions.Function0" />

        <variable
            name="onBackButtonClick"
            type="kotlin.jvm.functions.Function0" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_page">

        <com.abloom.mery.presentation.common.view.MeryAppBar
            android:id="@+id/appbar_leave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_up_button"
            app:onNavigationClick="@{() -> onBackButtonClick.invoke()}" />

        <ScrollView
            android:id="@+id/sv_leave_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@id/tv_leave_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar_leave"
            app:layout_constraintVertical_bias="0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingVertical="9dp">

                <TextView
                    android:id="@+id/tv_leave_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="29dp"
                    android:paddingVertical="6dp"
                    android:text="@string/leave_title"
                    android:textAppearance="@style/title2"
                    android:textColor="@color/neutral_90"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_leave_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:paddingVertical="4dp"
                    android:text="@string/leave_message"
                    android:textAppearance="@style/subheadline"
                    android:textColor="@color/neutral_70" />

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tv_leave_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:onClick="@{() -> onLeaveButtonClick.invoke()}"
            android:paddingVertical="4dp"
            android:text="@string/leave_leave_button_text"
            android:textAppearance="@style/callout"
            android:textColor="@color/neutral_50"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_all_primary_button_big"
            android:gravity="center"
            android:onClick="@{() -> onBackButtonClick.invoke()}"
            android:paddingVertical="16dp"
            android:text="@string/leave_back_button_text"
            android:textAppearance="@style/callout"
            android:textColor="#FBF8FC"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
